--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "humps": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
+    "normalizr": "^3.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17",
+    "react-router": "^4.2.0",
+    "react-scripts": "^1.0.17",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0"
   },
