--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,12 +7,17 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "normalizr": "^3.2.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "promise": "^8.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router": "^3.0.0",
     "react-scripts": "^1.0.17",
-    "redux": "^3.7.2",
+    "redux": "^3.0.0",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
   },
   "scripts": {
